# rules_distroless_dotnet

./: BUILD.bazel  Program.fs  README.md  WORKSPACE  bullseye.lock.json  bullseye.yaml  cmd.txt  entrypoint.txt  paket.dependencies  sync-paket-bazel-deps.sh
